--- a/rag-ui/package.json
+++ b/rag-ui/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.13",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
